--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ learning_loop_node = { path = "learning_loop_node/", develop = true }
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
 autopep8 = "^1.5.5"
+icecream = "^2.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
