--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.7"
 learning_loop_node = { path = "learning_loop_node/", develop = true }
 icecream = "^2.1.0"
 psutil = "^5.8.0"
+pytest-asyncio = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
