--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,10 @@
     "editor.defaultFormatter": "ms-python.python"
   },
   "python.formatting.autopep8Args": ["--max-line-length", "120"],
-  "python.testing.pytestArgs": ["."],
+  "python.testing.pytestArgs": ["darknet_tests"],
   "python.testing.unittestEnabled": false,
   "python.testing.nosetestsEnabled": false,
   "python.testing.pytestEnabled": true,
   "python.testing.promptToConfigure": false,
+  "python.pythonPath": "/bin/python"
 }
