--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 # NOTE: changing default location of pytest_cache because the uvicorn file watcher somehow triggered to many reloads
 cache_dir = /.pytest_cache 
+python_files = test_*.py
 
+    
 testpaths =
     darknet_tests
+    learning_loop_node/tests
