--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ learning_loop_node = { path = "learning_loop_node/", develop = true }
 icecream = "^2.1.0"
 psutil = "^5.8.0"
 pytest-asyncio = "^0.14.0"
+debugpy = "^1.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
