--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ icecream = "^2.1.0"
 psutil = "^5.8.0"
 pytest-asyncio = "^0.14.0"
 debugpy = "^1.2.1"
+aiofiles = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
