--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["Zauberzeug <info@zauberzeug.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-learning_loop_node = { path = "learning_loop_node/", develop = true }
 icecream = "^2.1.0"
 psutil = "^5.8.0"
 pytest-asyncio = "^0.14.0"
 debugpy = "^1.2.1"
-aiofiles = "^0.6.0"
+aiofiles = "^0.7.0"
 retry = "^0.9.2"
+async_generator = "^1.10"
+learning-loop-node = {path = "../"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
